tests/compile-fail/stacked_borrows/return_invalid_mut.stderr
error: Undefined Behavior: trying to reborrow <1907> for Unique permission at alloc953[0x4], but that tag does not exist in the borrow stack for this location
  --> $DIR/return_invalid_mut.rs:6:5
   |
6  |     ret //~ ERROR borrow stack
   |     ^^^
   |     |
   |     trying to reborrow <1907> for Unique permission at alloc953[0x4], but that tag does not exist in the borrow stack for this location
   |     this error occurs as part of a reborrow at alloc953[0x4..0x8]
   |
   = help: this indicates a potential bug in the program: it performed an invalid operation, but the rules it violated are still experimental
   = help: see https://github.com/rust-lang/unsafe-code-guidelines/blob/master/wip/stacked-borrows.md for further information
           
   = note: inside `foo` at $DIR/return_invalid_mut.rs:6:5
note: inside `main` at $DIR/return_invalid_mut.rs:10:5
  --> $DIR/return_invalid_mut.rs:10:5
   |
10 |     foo(&mut (1, 2));
   |     ^^^^^^^^^^^^^^^^

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

